--- a/menbar_application/android/build.gradle
+++ b/menbar_application/android/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         jcenter()
     }
 
@@ -13,7 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         jcenter()
     }
 }
