fonts changed to IRAN-Sans

--- a/menbar_application/pubspec.yaml
+++ b/menbar_application/pubspec.yaml
@@ -40,7 +40,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  fonts:
+     - family: sans
+       fonts:
+         - asset: fonts/iran_sans_bold.ttf
+         - asset: fonts/iran_sans.ttf
+           style: normal
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
