--- a/menbar_application/pubspec.yaml
+++ b/menbar_application/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
+  sliver_tools: ^0.2.5
+  animations: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
