--- a/menbar_application/pubspec.yaml
+++ b/menbar_application/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^2.0.2
   sliver_tools: ^0.2.5
   animations: ^2.0.1
+  cached_network_image: ^3.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
